--- a/menu.html
+++ b/menu.html
@@ -1,33 +1,33 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>老八合集</title>
-  <style>
-  .box{
-  width: 600px;
-  height: 1200px;
-  margin: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
+<！doctype html>
+<超文本标记语言>
+<头>
+  <元字符集="utf-8">
+  <标题>老八合集</标题>
+  <风格>
+.box{
+  宽度:600PX;
+  高度:1200PX;
+  边缘:自动;
+  顶端:0;
+  左:0;
+  正确的:0;
+  底部:0;
+  文本对齐:中心;
   }
-  </style>
-</head>
-<body bgcolor="#FF0000" text="#000000" link="#000000">
-<div class="box">
-<font size="10">
-<h1>老八远古视频</h1>
-</font>
-<font size="10">
-<p style="text-align: left">P1 <a href="../网页/老八一战.mp4">老八一战</a></p>
-<p style="text-align: left">P2 <a href="../网页/老八二战.mp4">老八二战</a></p>
-<p style="text-align: left">P3 <a href="../网页/老八三战.mp4">老八三战</a></p>
-<p style="text-align: left">P4 <a href="../网页/老八鞭炮崩高玩.mp4">老八鞭炮崩高玩</a></p>
-<p style="text-align: left">P5 <a href="../网页/老八重回一二战厕所.mp4">老八重回一二战厕所</a></p>
-</font>
+  </风格>
+</头>
+<身体bgcolor="#FF0000" 文本="#000000" 链接="#000000">
+<div班级="框">
+<字体大小="10">
+<H1>老八远古视频</H1>
+</字体>
+<字体大小="10">
+<p风格="文本对齐:左">P1<一个href="../老八一战.MP4">老八一战</一个></p>
+<p风格="文本对齐:左">P2<一个href="../老八二战.MP4">老八二战</一个></p>
+<p风格="文本对齐:左">P3<一个href="../老八三战.MP4">老八三战</一个></p>
+<p风格="文本对齐:左">P4<一个href="../老八鞭炮崩高玩.MP4">老八鞭炮崩高玩</一个></p>
+<p风格="文本对齐:左">P5<一个href="../老八重回一二战厕所.MP4">老八重回一二战厕所</一个></p>
+</字体>
 </div>
-</body>
-</html>
+</身体>
+</超文本标记语言>
