--- a/menu.html
+++ b/menu.html
@@ -29,13 +29,13 @@
 <p style="text-align: left">P4 <a href="../laoba/老八鞭炮崩高玩.mp4">老八鞭炮崩高玩</a></p>
 <p style="text-align: left">P5 <a href="../laoba/老八重回一二战厕所.mp4">老八重回一二战厕所</a></p>
   </blockquote>
-  <p style="text-align: left"><strong>下面链接加载快一点但有可能服务器会自动关闭就打不开</strong></p>
+  <p style="text-align: left"><strong>番外篇老八的徒弟</strong></p>
   <blockquote> 
-<p style="text-align: left">P1 <a href="http://[2409:8a04:2e5d:ce70:c4d1:6eff:fee3:3654]:18080/%E8%80%81%E5%85%AB%E4%B8%80%E6%88%98.mp4">老八一战</a></p>
-<p style="text-align: left">P2 <a href="http://[2409:8a04:2e5d:ce70:c4d1:6eff:fee3:3654]:18080/%E8%80%81%E5%85%AB%E4%BA%8C%E6%88%98.mp4">老八二战</a></p>
-<p style="text-align: left">P3 <a href="http://[2409:8a04:2e5d:ce70:c4d1:6eff:fee3:3654]:18080/%E8%80%81%E5%85%AB%E4%B8%89%E6%88%98.mp4">老八三战</a></p>
-<p style="text-align: left">P4 <a href="http://[2409:8a04:2e5d:ce70:c4d1:6eff:fee3:3654]:18080/%E8%80%81%E5%85%AB%E9%9E%AD%E7%82%AE%E5%B4%A9%E9%AB%98%E7%8E%A9.mp4">老八鞭炮崩高玩</a></p>
-<p style="text-align: left">P5 <a href="http://[2409:8a04:2e5d:ce70:c4d1:6eff:fee3:3654]:18080/%E8%80%81%E5%85%AB%E9%87%8D%E5%9B%9E%E4%B8%80%E4%BA%8C%E6%88%98%E5%8E%95%E6%89%80.mp4">老八重回一二战厕所</a></p>
+<p style="text-align: left">P1 <a href="../laoba/老八的徒弟1.mp4">老八的徒弟1</a></p>
+<p style="text-align: left">P2 <a href="../laoba/老八的徒弟2.mp4">老八的徒弟2</a></p>
+<p style="text-align: left">P3 <a href="../laoba/老八的徒弟3.mp4">老八的徒弟3</a></p>
+<p style="text-align: left">P4 <a href="../laoba/老八的徒弟王子木一战">老八的徒弟王子木一战</a></p>
+<p style="text-align: left">P5 <a href="../laoba/老八的徒弟王子木二战">老八的徒弟王子木二战</a></p>
   </blockquote>
 </font>
 </div>
