--- a/menu.html
+++ b/menu.html
@@ -39,6 +39,6 @@
   </blockquote>
 </font>
 </div>
-  <a href="https://youtu.be/dQw4w9WgXcQ?si=OqFpRODJMFWFBY7f">测试链接</a>
+<p style="text-align: left">测试用的 <a href="https://youtu.be/dQw4w9WgXcQ?si=OqFpRODJMFWFBY7f">测试链接</a></p>
 </body>
 </html>
