--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
 <p style="text-align: left">P1 <a href="../laoba/老八的徒弟1.mp4">老八的徒弟1</a></p>
 <p style="text-align: left">P2 <a href="../laoba/老八的徒弟2.mp4">老八的徒弟2</a></p>
 <p style="text-align: left">P3 <a href="../laoba/老八的徒弟3.mp4">老八的徒弟3</a></p>
-<p style="text-align: left">P4 <a href="../laoba/老八的徒弟王子木一战">老八的徒弟王子木一战</a></p>
+<p style="text-align: left">P4 <a href="../laoba/老八的徒弟王子木一战.mp4">老八的徒弟王子木</a></p>
   </blockquote>
 </font>
 </div>
