--- a/menu.html
+++ b/menu.html
@@ -28,6 +28,7 @@
 <p style="text-align: left">P3 <a href="../laoba/老八三战.mp4">老八三战</a></p>
 <p style="text-align: left">P4 <a href="../laoba/老八鞭炮崩高玩.mp4">老八鞭炮崩高玩</a></p>
 <p style="text-align: left">P5 <a href="../laoba/老八重回一二战厕所.mp4">老八重回一二战厕所</a></p>
+<p style="text-align: left">P6 <a href="../laoba/老八被说吃屎后破防.mp4">老八被叫吃屎后破防</a></p>
   </blockquote>
   <p style="text-align: left"><strong>番外篇老八的徒弟</strong></p>
   <blockquote> 
@@ -36,8 +37,12 @@
 <p style="text-align: left">P3 <a href="../laoba/老八的徒弟3.mp4">老八的徒弟3</a></p>
 <p style="text-align: left">P4 <a href="../laoba/老八的徒弟王子木一战.mp4">老八的徒弟王子木</a></p>
   </blockquote>
+  <p style="text-align: left"><strong>其他好康的</strong></p>
+  <blockquote>
+<p style="text-align: left">P1 <a href="../laoba/三天之内杀了你.mp4">三天之内杀了你</a></p>
+<p style="text-align: left">P2 <a href="../laoba/三天之内心想事成.mp4">三天之内心想事成</a></p>
+<p style="text-align: left">P3 <a href="../laoba/78物业.mp4">78物业</a></p>
+  </blockquote>
 </font>
 </div>
-<p style="text-align: left">测试用的 <a href="https://youtu.be/dQw4w9WgXcQ?si=OqFpRODJMFWFBY7f">测试链接</a></p>
-</body>
 </html>
