--- a/menu.html
+++ b/menu.html
@@ -42,6 +42,7 @@
 <p style="text-align: left">P1 <a href="../laoba/三天之内杀了你.mp4">三天之内杀了你</a></p>
 <p style="text-align: left">P2 <a href="../laoba/三天之内心想事成.mp4">三天之内心想事成</a></p>
 <p style="text-align: left">P3 <a href="../laoba/78物业.mp4">78物业</a></p>
+<p style="text-align: left">P4 <a href="../laoba/78物业前传.mp4">78物业前传</a></p>
   </blockquote>
 </font>
 </div>
