--- a/menu.html
+++ b/menu.html
@@ -43,6 +43,15 @@
 <p style="text-align: left">P2 <a href="../laoba/三天之内心想事成.mp4">三天之内心想事成</a></p>
 <p style="text-align: left">P3 <a href="../laoba/78物业.mp4">78物业</a></p>
 <p style="text-align: left">P4 <a href="../laoba/78物业前传.mp4">78物业前传</a></p>
+<p style="text-align: left">P5 <a href="../laoba/video/虎哥凉水扣头.mp4">虎哥凉水扣头</a></p>
+<p style="text-align: left">P6 <a href="../laoba/video/虎哥耕地.mp4">虎哥耕地</a></p>
+<p style="text-align: left">P7 <a href="../laoba/video/虎哥爆破公交车.mp4">虎哥爆破公交车</a></p>
+<p style="text-align: left">P8 <a href="../laoba/video/虎哥独立宣言.mp4">虎哥独立宣言</a></p>
+<p style="text-align: left">P9 <a href="../laoba/video/车神虎哥.mp4">车神虎哥</a></p>
+<p style="text-align: left">P10 <a href="../laoba/video/虎哥买衣服.mp4">虎哥买衣服</a></p>
+<p style="text-align: left">P11 <a href="../laoba/video/虎哥找对象.mp4">虎哥找对象</a></p>
+<p style="text-align: left">P12 <a href="../laoba/video/虎哥七夕踢馆.mp4">虎哥七夕踢馆</a></p>
+<p style="text-align: left">P13 <a href="../laoba/video/黑牛突击唐老鸭.mp4">黑牛突击唐老鸭</a></p>
   </blockquote>
 </font>
 </div>
