--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,13 @@
   bottom: 0;
   text-align: center;
   }
+        .lo{
+      width: 100%;
+      margin: auto;
+      top: 0;
+  left: 100;
+  right: 0;
+        }
   </style>
 </head>
 <body bgcolor="#FF0000" text="#000000" link="#000000">
@@ -53,6 +60,14 @@
 <p style="text-align: left">P12 <a href="../laoba/video/虎哥七夕踢馆.mp4">虎哥七夕踢馆</a></p>
 <p style="text-align: left">P13 <a href="../laoba/video/黑牛突击唐老鸭.mp4">黑牛突击唐老鸭</a></p>
   </blockquote>
+  <div class="lo">
+    <h1>笑死我了</h1>
+    <img src="苗靳琪.PNG" alt="苗靳琪😂">
+    <h1>还真被骗进去了</h1>
+    <img src="苗靳琪1.PNG" alt="苗靳琪😂">
+  </div>
+  <p style="text-align: left">P <a href="https://xhnzz.xyz/index/index/zyj/photo.php?id=443438821&url=http%3A%2F%2Fxhnzz.xyz%2F">黑牛突击唐老鸭</a></p>
+</blockquote>
 </font>
 </div>
 </html>
