--- a/menu.html
+++ b/menu.html
@@ -61,9 +61,8 @@
 <p style="text-align: left">P13 <a href="../laoba/video/黑牛突击唐老鸭.mp4">黑牛突击唐老鸭</a></p>
   </blockquote>
   <div class="lo">
-    <h1>笑死我了</h1>
+    <h1>苗靳琪</h1>
     <img src="苗靳琪.PNG" alt="苗靳琪😂">
-    <h1>还真被骗进去了</h1>
     <img src="苗靳琪1.PNG" alt="苗靳琪😂">
   </div>
   <p style="text-align: left">P <a href="https://xhnzz.xyz/index/index/zyj/photo.php?id=443438821&url=http%3A%2F%2Fxhnzz.xyz%2F">黑牛突击唐老鸭</a></p>
