--- a/menu.html
+++ b/menu.html
@@ -63,10 +63,10 @@
   <div class="lo">
     <h1>苗靳琪</h1>
     <img src="苗靳琪.PNG" alt="苗靳琪😂">
-    <img src="苗靳琪1.PNG" alt="苗靳琪😂">
+    <img src="苗靳琪1.png" alt="苗靳琪😂">
   </div>
-  <p style="text-align: left">P <a href="https://xhnzz.xyz/index/index/zyj/photo.php?id=443438821&url=http%3A%2F%2Fxhnzz.xyz%2F">黑牛突击唐老鸭</a></p>
 </blockquote>
 </font>
+  <p style="text-align: left">ovo <a href="https://xhnzz.xyz/index/index/zyj/photo.php?id=443438821&url=http%3A%2F%2Fxhnzz.xyz%2F">qwq</a></p>
 </div>
 </html>
